--- a/opusapp/src/main/res/layout/activity_library_detail_with_header.xml
+++ b/opusapp/src/main/res/layout/activity_library_detail_with_header.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sliding_layout"
     android:layout_width="match_parent"
@@ -31,13 +30,20 @@
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/main_toolbar"
+                android:id="@+id/main_toolbar_light"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:minHeight="?attr/actionBarSize"
+                app:theme="@style/ThemeOverlay.AppCompat.Light"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:visibility="gone"/>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/main_toolbar_dark"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark"
-                app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:background="@color/materialPrimaryColor" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:visibility="gone"/>
         </FrameLayout>
     </LinearLayout>
 
