--- a/opusapp/src/main/res/layout/activity_library_main.xml
+++ b/opusapp/src/main/res/layout/activity_library_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/sliding_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom" >
+    android:gravity="bottom">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,13 +13,20 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/main_toolbar"
+            android:id="@+id/main_toolbar_light"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:minHeight="?attr/actionBarSize"
+            app:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:visibility="gone"/>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar_dark"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             app:theme="@style/ThemeOverlay.AppCompat.Dark"
-            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
-            android:background="@color/materialPrimaryColor" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:visibility="gone"/>
 
         <android.support.v4.widget.DrawerLayout
             android:id="@+id/drawer_layout"
