--- a/opusapp/src/main/res/layout/activity_library_path.xml
+++ b/opusapp/src/main/res/layout/activity_library_path.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/main_toolbar"
+        android:id="@+id/main_toolbar_light"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ThemeOverlay.AppCompat.Light"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:visibility="gone"/>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar_dark"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         app:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
-        android:background="@color/materialPrimaryColor" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:visibility="gone"/>
 
 	<include layout="@layout/view_tabbed_pager"/>
 
