--- a/opusapp/src/main/res/layout-v21/notification_template_expanded_base.xml
+++ b/opusapp/src/main/res/layout-v21/notification_template_expanded_base.xml
@@ -37,7 +37,7 @@
             android:background="?android:selectableItemBackground"
             android:padding="@dimen/notification_expanded_button_padding"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_action_playback_prev_dark" />
+            android:src="@drawable/ic_action_playback_prev" />
 
         <ImageButton
             android:id="@+id/notification_expanded_base_play"
@@ -47,7 +47,7 @@
             android:background="?android:selectableItemBackground"
             android:padding="@dimen/notification_expanded_button_padding"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_action_playback_pause_dark" />
+            android:src="@drawable/ic_action_playback_play" />
 
         <ImageButton
             android:id="@+id/notification_expanded_base_next"
@@ -57,7 +57,7 @@
             android:background="?android:selectableItemBackground"
             android:padding="@dimen/notification_expanded_button_padding"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_action_playback_next_dark" />
+            android:src="@drawable/ic_action_playback_next" />
     </LinearLayout>
 
     <ImageView
@@ -76,7 +76,7 @@
         android:layout_alignParentTop="true"
         android:background="?android:selectableItemBackground"
         android:padding="@dimen/notification_expanded_collapse_padding"
-        android:src="@drawable/btn_notification_collapse" />
+        android:src="@drawable/btn_notification_collapse_dark" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -92,17 +92,17 @@
         <TextView
             android:id="@+id/notification_expanded_base_line_one"
             style="@style/NotificationText"
-            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title" />
+            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title" />
 
         <TextView
             android:id="@+id/notification_expanded_base_line_two"
             style="@style/NotificationText"
-            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent" />
+            android:textAppearance="@android:style/TextAppearance.Material.Notification.Info" />
 
         <TextView
             android:id="@+id/notification_expanded_base_line_three"
             style="@style/NotificationText"
-            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent" />
+            android:textAppearance="@android:style/TextAppearance.Material.Notification.Info" />
     </LinearLayout>
 
 </RelativeLayout>
