--- a/opusapp/src/main/res/layout/activity_car_mode.xml
+++ b/opusapp/src/main/res/layout/activity_car_mode.xml
@@ -17,10 +17,10 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical|center_horizontal">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent_white"
             android:orientation="vertical">
@@ -29,7 +29,7 @@
                 android:id="@+id/upper_panel"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="0dp"
+                android:layout_margin="10dp"
                 android:orientation="horizontal" >
 
                 <LinearLayout
@@ -82,46 +82,52 @@
                 android:layout_height="40dp"
                 android:minHeight="40dp"
                 android:maxHeight="40dp"
-                android:padding="0dp"/>
+                android:padding="0dp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/audio_controls_controls_height_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:orientation="horizontal"
-                >
+                android:layout_margin="10dp">
 
                 <ImageButton
                     android:id="@+id/audio_player_repeat"
                     style="@style/PlayerButton"
                     android:contentDescription="@string/imageview_content_description_repeat"
                     android:src="@drawable/ic_action_playback_repeat_off"
-                    android:visibility="invisible"/>
+                    android:visibility="gone"/>
 
                 <net.opusapp.player.ui.views.RepeatingImageButton
                     android:id="@+id/audio_player_prev"
                     style="@style/PlayerButton"
                     android:contentDescription="@string/imageview_content_description_previous"
-                    android:src="@drawable/ic_action_playback_prev" />
+                    android:src="@drawable/ic_action_playback_prev"
+                    android:layout_height="@dimen/audio_controls_controls_height_2"
+                    android:layout_width="@dimen/audio_controls_controls_height_2" />
 
                 <ImageButton
                     android:id="@+id/audio_player_play"
                     style="@style/PlayerButton"
                     android:contentDescription="@string/imageview_content_description_play"
-                    android:src="@drawable/ic_action_playback_play" />
+                    android:src="@drawable/ic_action_playback_play"
+                    android:layout_width="@dimen/audio_controls_controls_height_2"
+                    android:layout_height="@dimen/audio_controls_controls_height_2" />
 
                 <net.opusapp.player.ui.views.RepeatingImageButton
                     android:id="@+id/audio_player_next"
                     style="@style/PlayerButton"
                     android:contentDescription="@string/imageview_content_description_next"
-                    android:src="@drawable/ic_action_playback_next" />
+                    android:src="@drawable/ic_action_playback_next"
+                    android:layout_height="@dimen/audio_controls_controls_height_2"
+                    android:layout_width="@dimen/audio_controls_controls_height_2" />
 
                 <ImageButton
                     android:id="@+id/audio_player_shuffle"
                     style="@style/PlayerButton"
                     android:contentDescription="@string/imageview_content_description_shuffle"
                     android:src="@drawable/ic_action_playback_shuffle_off"
-                    android:visibility="invisible" />
+                    android:visibility="gone" />
             </LinearLayout>
 
         </LinearLayout>
