Fixed: added ".opus" to scanned file extensions.

--- a/opusapp/src/main/res/values/arrays.xml
+++ b/opusapp/src/main/res/values/arrays.xml
@@ -27,6 +27,7 @@
         <item>@string/ext_ogg</item>
         <item>@string/ext_ogv</item>
         <item>@string/ext_ogx</item>
+        <item>@string/ext_opus</item>
         <item>@string/ext_pcm</item>
         <item>@string/ext_tta</item>
         <item>@string/ext_wav</item>
