(internal) code cleanup: merged NotificationHelper in PlayerService (internal) code cleanup: removed unused ServiceBroadcastReceiver Updated: MetadataDialog support for small screens (added *_metadata_phone_* layouts).

--- a/opusapp/src/main/res/layout/dialog_metadata_phone_editor.xml
+++ b/opusapp/src/main/res/layout/dialog_metadata_phone_editor.xml
@@ -9,13 +9,13 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <TableLayout
+        <LinearLayout
             android:id="@+id/table_container"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:stretchColumns="1">
+            android:orientation="vertical">
 
-        </TableLayout>
+        </LinearLayout>
     </ScrollView>
 
     <LinearLayout
