(internal) code cleanup: moved free version specific things to separate source three. Added: ability to save/reinitialize equalizer presets.

--- a/opusapp/src/main/res/layout/view_item_double_line_thumbnailed.xml
+++ b/opusapp/src/main/res/layout/view_item_double_line_thumbnailed.xml
@@ -46,11 +46,9 @@
 
     <ImageButton
         android:id="@+id/context_menu_handle"
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="fill_parent"
-        android:layout_weight="0.0"
         android:adjustViewBounds="false"
-        android:paddingRight="5.0dp"
         android:background="@color/transparent"
         android:src="@drawable/dropdown_ic_arrow" />
 </LinearLayout>
