--- a/opusapp/src/main/res/layout/view_item_single_line.xml
+++ b/opusapp/src/main/res/layout/view_item_single_line.xml
@@ -10,7 +10,7 @@
     android:descendantFocusability="blocksDescendants"  >
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1.0"
         android:gravity="center"
@@ -30,11 +30,9 @@
 
     <ImageButton
         android:id="@+id/context_menu_handle"
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="fill_parent"
-        android:layout_weight="0.0"
         android:adjustViewBounds="false"
-        android:paddingRight="5.0dp"
         android:background="@color/transparent"
         android:src="@drawable/dropdown_ic_arrow" />
 
