Updated: Changed playlist icon to a more appropriate one. Updated: Moved playback options (like equalizer and auto pause) to global overflow menu. Fixed: Refresh menu item not updated correctly. Fixed: Force close on some device with Android <= 4.2 (API 17)

--- a/opusapp/src/main/res/layout/app_widget4x2.xml
+++ b/opusapp/src/main/res/layout/app_widget4x2.xml
@@ -73,7 +73,7 @@
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
             android:paddingLeft="@dimen/notification_info_container_padding_left"
-            android:paddingStart="@dimen/notification_info_container_padding_left"
+            android:paddingRight="@dimen/notification_info_container_padding_left"
             android:paddingTop="@dimen/notification_expanded_content_padding_top"
             android:gravity="center_vertical">
 
