--- a/opusapp/src/main/res/layout-land/view_panel_player.xml
+++ b/opusapp/src/main/res/layout-land/view_panel_player.xml
@@ -15,65 +15,57 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
+            android:orientation="horizontal"
             android:padding="0dp"
-            android:layout_weight="50"
-            android:orientation="vertical">
+            android:layout_weight="50">
 
             <LinearLayout
+                android:id="@+id/audio_player_header"
+                android:layout_height="68.0dp"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:id="@+id/audio_player_header"
-                    android:layout_height="68.0dp"
-                    android:layout_weight="25.0"
-                    android:layout_width="fill_parent"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical" >
-
-                    <net.opusapp.player.ui.views.CustomTextView
-                        android:id="@+id/audio_player_track_name"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:paddingBottom="2.0dip"
-                        android:paddingLeft="10.0dip"
-                        android:paddingStart="10.0dip"
-                        android:paddingRight="10.0dip"
-                        android:paddingEnd="10.0dip"
-                        android:singleLine="true"
-                        android:textColor="#ff000000"
-                        android:textIsSelectable="false"
-                        android:textSize="16.0dip" />
-
-                    <net.opusapp.player.ui.views.CustomTextView
-                        android:id="@+id/audio_player_artist_name"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:paddingLeft="10.0dip"
-                        android:paddingStart="10.0dip"
-                        android:paddingRight="10.0dip"
-                        android:paddingEnd="10.0dip"
-                        android:singleLine="true"
-                        android:textColor="#ff000000"
-                        android:textIsSelectable="false"
-                        android:textSize="16.0dip" />
-                </LinearLayout>
+                android:layout_weight="25"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical" >
 
                 <net.opusapp.player.ui.views.CustomTextView
-                    android:id="@+id/audio_player_time"
+                    android:id="@+id/audio_player_track_name"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="75.0"
-                    android:gravity="center"
-                    android:textColor="#ff33b5e5"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:paddingBottom="2.0dip"
+                    android:paddingLeft="10.0dip"
+                    android:paddingRight="10.0dip"
+                    android:paddingEnd="10.0dip"
+                    android:singleLine="true"
+                    android:textColor="#ff000000"
                     android:textIsSelectable="false"
-                    android:textSize="23.0dip" />
+                    android:textSize="16.0dip" />
+
+                <net.opusapp.player.ui.views.CustomTextView
+                    android:id="@+id/audio_player_artist_name"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:paddingLeft="10.0dip"
+                    android:paddingRight="10.0dip"
+                    android:paddingEnd="10.0dip"
+                    android:singleLine="true"
+                    android:textColor="#ff000000"
+                    android:textIsSelectable="false"
+                    android:textSize="16.0dip" />
             </LinearLayout>
+
+            <net.opusapp.player.ui.views.CustomTextView
+                android:id="@+id/audio_player_time"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="75"
+                android:gravity="center"
+                android:textColor="#ff33b5e5"
+                android:textIsSelectable="false"
+                android:textSize="23.0dip" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -98,7 +90,6 @@
                     android:ellipsize="end"
                     android:paddingBottom="2.0dip"
                     android:paddingLeft="10.0dip"
-                    android:paddingStart="10.0dip"
                     android:paddingRight="10.0dip"
                     android:paddingEnd="10.0dip"
                     android:singleLine="true"
@@ -190,6 +181,14 @@
             android:padding="0dp"
             android:layout_weight="50">
 
+
+            <ImageButton
+                android:id="@+id/playlist_show"
+                style="@style/PlayerButton"
+                android:contentDescription="@string/imageview_content_description_playlist"
+                android:visibility="gone"
+                android:src="@drawable/ic_more_vert_grey600_48dp" />
+
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -201,42 +200,6 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/audio_controls_controls_height"
-                android:layout_alignParentBottom="true"
-                android:baselineAligned="false">
-
-                <View
-                    android:layout_height="match_parent"
-                    android:layout_width="fill_parent"
-                    android:layout_weight="40.0"
-                    android:layout_gravity="center"
-                    android:gravity="center" />
-
-                <LinearLayout
-                    android:layout_height="match_parent"
-                    android:layout_width="fill_parent"
-                    android:layout_weight="60.0"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="horizontal" >
-
-
-                    <ImageButton
-                        android:id="@+id/playlist_show"
-                        style="@style/PlayerButton"
-                        android:contentDescription="@string/imageview_content_description_playlist"
-                        android:visibility="invisible"
-                        android:src="@drawable/ic_more_vert_grey600_48dp" />
-
-                    <ImageButton
-                        android:id="@+id/song_options"
-                        style="@style/PlayerButton"
-                        android:contentDescription="@string/imageview_content_description_option_menu"
-                        android:src="@drawable/ic_more_vert_grey600_24dp" />
-                </LinearLayout>
-            </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
