Added: Current media duration in player UI.

--- a/opusapp/src/main/res/layout-land/view_panel_player.xml
+++ b/opusapp/src/main/res/layout-land/view_panel_player.xml
@@ -21,9 +21,9 @@
 
             <LinearLayout
                 android:id="@+id/audio_player_header"
+                android:layout_width="0dp"
                 android:layout_height="68.0dp"
-                android:layout_width="fill_parent"
-                android:layout_weight="25"
+                android:layout_weight="75"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical" >
@@ -56,16 +56,29 @@
                     android:textSize="16.0dip" />
             </LinearLayout>
 
-            <net.opusapp.player.ui.views.CustomTextView
-                android:id="@+id/audio_player_time"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="75"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="68.0dp"
+                android:layout_weight="25"
                 android:gravity="center"
-                android:textColor="#ff33b5e5"
-                android:textIsSelectable="false"
-                android:textSize="23.0dip" />
+                android:orientation="vertical">
 
+                <net.opusapp.player.ui.views.CustomTextView
+                    android:id="@+id/audio_player_time"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textIsSelectable="false"
+                    android:textSize="23.0dip" />
+
+                <net.opusapp.player.ui.views.CustomTextView
+                    android:id="@+id/audio_player_time_total"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textIsSelectable="false"
+                    android:textSize="23.0dip" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
