--- a/opusapp/src/main/res/layout/activity_car_mode.xml
+++ b/opusapp/src/main/res/layout/activity_car_mode.xml
@@ -34,20 +34,19 @@
 
                 <LinearLayout
                     android:id="@+id/audio_player_header"
+                    android:layout_width="0dp"
                     android:layout_height="68.0dp"
-                    android:layout_weight="25.0"
-                    android:layout_width="fill_parent"
+                    android:layout_weight="75"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
                     <net.opusapp.player.ui.views.CustomTextView
                         android:id="@+id/audio_player_track_name"
-                        android:layout_width="fill_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:paddingBottom="2.0dip"
-                        android:paddingLeft="20dp"
                         android:singleLine="true"
                         android:textColor="#ff000000"
                         android:textIsSelectable="false"
@@ -55,25 +54,38 @@
 
                     <net.opusapp.player.ui.views.CustomTextView
                         android:id="@+id/audio_player_artist_name"
-                        android:layout_width="fill_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:paddingLeft="20dp"
                         android:singleLine="true"
                         android:textColor="#ff999999"
                         android:textIsSelectable="false"
                         android:textSize="16.0dip" />
                 </LinearLayout>
 
-                <net.opusapp.player.ui.views.CustomTextView
-                    android:id="@+id/audio_player_time"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="75.0"
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="68.0dp"
+                    android:layout_weight="25"
                     android:gravity="center"
-                    android:textColor="#ff33b5e5"
-                    android:textIsSelectable="false"
-                    android:textSize="23.0dip" />
+                    android:orientation="vertical">
+
+                    <net.opusapp.player.ui.views.CustomTextView
+                        android:id="@+id/audio_player_time"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textIsSelectable="false"
+                        android:textSize="23.0dip" />
+
+                    <net.opusapp.player.ui.views.CustomTextView
+                        android:id="@+id/audio_player_time_total"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textIsSelectable="false"
+                        android:textSize="23.0dip" />
+                </LinearLayout>
             </LinearLayout>
 
             <SeekBar
