--- a/opusapp/src/main/res/layout-v21/notification_template_base.xml
+++ b/opusapp/src/main/res/layout-v21/notification_template_base.xml
@@ -27,12 +27,12 @@
         <TextView
             android:id="@+id/notification_base_line_one"
             style="@style/NotificationText"
-            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title" />
+            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title" />
 
         <TextView
             android:id="@+id/notification_base_line_two"
             style="@style/NotificationText"
-            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent" />
+            android:textAppearance="@android:style/TextAppearance.Material.Notification.Info" />
 
     </LinearLayout>
 
