--- a/opusapp/src/main/res/layout-land/view_panel_player.xml
+++ b/opusapp/src/main/res/layout-land/view_panel_player.xml
@@ -4,137 +4,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    
+    <!-- Panel header-->
     <LinearLayout
         android:id="@+id/upper_panel"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="68dp"
+        android:orientation="horizontal"
         android:baselineAligned="false">
-
+        
         <LinearLayout
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:orientation="horizontal"
-            android:padding="0dp"
-            android:layout_weight="50">
+            android:id="@+id/audio_player_header"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="50"
+            android:orientation="vertical"
+            android:gravity="center">
 
-            <LinearLayout
-                android:id="@+id/audio_player_header"
-                android:layout_width="0dp"
-                android:layout_height="68.0dp"
-                android:layout_weight="75"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical" >
+            <net.opusapp.player.ui.views.CustomTextView
+                android:id="@+id/audio_player_track_name"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:paddingTop="2dip"
+                android:paddingBottom="2dip"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingEnd="10dp"
+                android:singleLine="true"
+                android:textColor="#ff000000"
+                android:textIsSelectable="false"
+                android:textSize="16.0dip" />
 
-                <net.opusapp.player.ui.views.CustomTextView
-                    android:id="@+id/audio_player_track_name"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:paddingBottom="2.0dip"
-                    android:paddingLeft="10.0dip"
-                    android:paddingRight="10.0dip"
-                    android:paddingEnd="10.0dip"
-                    android:singleLine="true"
-                    android:textColor="#ff000000"
-                    android:textIsSelectable="false"
-                    android:textSize="16.0dip" />
-
-                <net.opusapp.player.ui.views.CustomTextView
-                    android:id="@+id/audio_player_artist_name"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:paddingLeft="10.0dip"
-                    android:paddingRight="10.0dip"
-                    android:paddingEnd="10.0dip"
-                    android:singleLine="true"
-                    android:textColor="#ff000000"
-                    android:textIsSelectable="false"
-                    android:textSize="16.0dip" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="68.0dp"
-                android:layout_weight="25"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <net.opusapp.player.ui.views.CustomTextView
-                    android:id="@+id/audio_player_time"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textIsSelectable="false"
-                    android:textSize="23.0dip" />
-
-                <net.opusapp.player.ui.views.CustomTextView
-                    android:id="@+id/audio_player_time_total"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textIsSelectable="false"
-                    android:textSize="23.0dip" />
-            </LinearLayout>
+            <net.opusapp.player.ui.views.CustomTextView
+                android:id="@+id/audio_player_artist_name"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:paddingTop="2dip"
+                android:paddingBottom="2dip"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingEnd="10dp"
+                android:singleLine="true"
+                android:textColor="#ff999999"
+                android:textIsSelectable="false"
+                android:textSize="16.0dip" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dip"
+            android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_margin="0dp"
-            android:padding="0dp"
-            android:gravity="center_vertical"
             android:layout_weight="50"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <net.opusapp.player.ui.views.CustomTextView
+                android:id="@+id/playlist_track_count"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
-
-                <net.opusapp.player.ui.views.CustomTextView
-                    android:id="@+id/playlist_track_count"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:paddingBottom="2.0dip"
-                    android:paddingLeft="10.0dip"
-                    android:paddingRight="10.0dip"
-                    android:paddingEnd="10.0dip"
-                    android:singleLine="true"
-                    android:gravity="start"
-                    android:textColor="#ff000000"
-                    android:textIsSelectable="false"
-                    android:textSize="16.0dip" />
-
-            </LinearLayout>
-
+                android:ellipsize="end"
+                android:padding="10dip"
+                android:singleLine="true"
+                android:gravity="start"
+                android:textColor="#ff000000"
+                android:textIsSelectable="false"
+                android:textSize="16.0dip" />
         </LinearLayout>
     </LinearLayout>
 
+    <!-- Content -->
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:baselineAligned="false"
-        android:orientation="horizontal" >
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <RelativeLayout
-            android:layout_width="0dip"
+            android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_margin="0dp"
-            android:padding="0dp"
-            android:layout_weight="50">
-
-            <!-- (Hauteur de la bottomBar / 2) - (Hauteur de la seekBar / 2) -->
+            android:layout_weight="50"
+            android:padding="0dp" >
 
             <RelativeLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="@dimen/audio_controls_controls_height">
+                android:layout_height="fill_parent" >
 
                 <ImageView
                     android:layout_width="fill_parent"
@@ -150,69 +104,88 @@
                     android:background="@color/transparent_white" />
             </RelativeLayout>
 
-            <LinearLayout
-                android:id="@+id/square_view_container"
+
+            <net.opusapp.player.ui.views.SquareImageView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:gravity="center_horizontal"
-                android:padding="5dp">
+                android:id="@+id/player_art"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:clickable="true"
+                android:layout_centerInParent="true"
+                android:src="@drawable/no_art_normal"
+                android:padding="10dp"/>
 
-                <net.opusapp.player.ui.views.SquareImageView
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:id="@+id/player_art"
-                    android:scaleType="centerCrop"
-                    android:clickable="true"
-                    android:src="@drawable/no_art_normal"
-                    android:layout_marginBottom="@dimen/audio_controls_controls_height" />
-            </LinearLayout>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="50"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <include layout="@layout/view_list_playlist"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- Controllers -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/audio_controls_controls_height"
+        android:orientation="horizontal"
+        android:baselineAligned="false">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="50"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <include layout="@layout/view_audio_player_controls" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="50"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/audio_player_time"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp" />
 
             <SeekBar
                 android:id="@+id/progress"
                 android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:minHeight="40dp"
-                android:maxHeight="40dp"
-                android:padding="0dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="36dp"/>
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/audio_player_time"
+                android:layout_toEndOf="@id/audio_player_time"
+                android:layout_toLeftOf="@id/audio_player_time_total"
+                android:layout_toStartOf="@id/audio_player_time_total" />
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/audio_controls_controls_height"
-                android:layout_alignParentBottom="true">
-
-                <include layout="@layout/view_audio_player_controls" />
-            </LinearLayout>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_margin="0dp"
-            android:padding="0dp"
-            android:layout_weight="50">
-
-
-            <ImageButton
-                android:id="@+id/playlist_show"
-                style="@style/PlayerButton"
-                android:contentDescription="@string/imageview_content_description_playlist"
-                android:visibility="gone"
-                android:src="@drawable/ic_more_vert_grey600_48dp" />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
+            <TextView
+                android:id="@+id/audio_player_time_total"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:id="@+id/playlist_container"
-                android:padding="5dp"
-                android:layout_marginBottom="@dimen/audio_controls_controls_height">
-
-                <include layout="@layout/view_list_playlist"/>
-
-            </LinearLayout>
+                android:gravity="center_vertical"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"/>
 
         </RelativeLayout>
     </LinearLayout>
+
 </LinearLayout>
