Added: Now displaying track number in lists with medias. Updated: Changed current track icon indicator. Fixed: Wrong anchor for Player Sliding panel in portrait mode.

--- a/opusapp/src/main/res/layout-land/view_panel_player.xml
+++ b/opusapp/src/main/res/layout-land/view_panel_player.xml
@@ -7,7 +7,7 @@
     
     <!-- Panel header-->
     <LinearLayout
-        android:id="@+id/upper_panel"
+        android:id="@+id/audio_player_upper_panel"
         android:layout_width="fill_parent"
         android:layout_height="68dp"
         android:orientation="horizontal"
