--- a/opusapp/src/main/res/layout/view_item_double_line.xml
+++ b/opusapp/src/main/res/layout/view_item_double_line.xml
@@ -9,7 +9,7 @@
     android:descendantFocusability="blocksDescendants"  >
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1.0"
         android:gravity="center"
