--- a/opusapp/src/main/res/layout/view_item_double_line_dragable_thumbnailed_indexed.xml
+++ b/opusapp/src/main/res/layout/view_item_double_line_dragable_thumbnailed_indexed.xml
@@ -37,15 +37,42 @@
             android:gravity="center_vertical"
             android:orientation="vertical" >
 
-            <net.opusapp.player.ui.views.CustomTextView
-                android:id="@+id/line_one"
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textIsSelectable="false"
-                android:singleLine="true"
-                android:textColor="#ff000000"
-                android:textSize="@dimen/text_size_medium"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <net.opusapp.player.ui.views.CustomTextView
+                    android:id="@+id/line_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textIsSelectable="false"
+                    android:singleLine="true"
+                    android:textColor="#ff000000"
+                    android:textSize="@dimen/text_size_medium"
+                    android:textStyle="bold" />
+
+                <net.opusapp.player.ui.views.CustomTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textIsSelectable="false"
+                    android:singleLine="true"
+                    android:textColor="#ff000000"
+                    android:textSize="@dimen/text_size_medium"
+                    android:paddingRight="5dp"
+                    android:text="."
+                    android:textStyle="bold" />
+
+                <net.opusapp.player.ui.views.CustomTextView
+                    android:id="@+id/line_one"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textIsSelectable="false"
+                    android:singleLine="true"
+                    android:textColor="#ff000000"
+                    android:textSize="@dimen/text_size_medium"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <net.opusapp.player.ui.views.CustomTextView
                 android:id="@id/line_two"
