--- a/opusapp/src/main/res/layout/view_panel_player.xml
+++ b/opusapp/src/main/res/layout/view_panel_player.xml
@@ -7,7 +7,7 @@
 
     <!-- Panel header-->
     <LinearLayout
-        android:id="@+id/audio_player_header"
+        android:id="@+id/audio_player_upper_panel"
         android:layout_width="fill_parent"
         android:layout_height="68dp"
         android:orientation="vertical"
