Updated: Play  store update 19 (beta)

--- a/opusapp/src/main/res/layout/dialog_edit_text.xml
+++ b/opusapp/src/main/res/layout/dialog_edit_text.xml
@@ -15,7 +15,8 @@
         android:layout_marginBottom="1dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:textAppearance="@android:style/TextAppearance.Large"/>
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:imeOptions="actionDone" />
 
     <LinearLayout
         android:layout_width="fill_parent"
